5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1716_2505.log
== TEST (2019-05-14 17:14:03) 
-- CODE:
from math import*
num = eval(input("um numero qualquer:"))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:17) 
-- CODE:
from math import*
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:22) 
-- CODE:
from math import*
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:27) 
-- CODE:
from math import*
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:12) 
-- CODE:
from math import*
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:28) 
-- CODE:
from math import*
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:48) 
-- CODE:
from math import*
li = 2
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:28) 
-- CODE:
from math import*
li = 2
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:37) 
-- CODE:
from math import*
li = 2
ki = 5
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:52) 
-- CODE:
from math import*
li = 2
ki = 5
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:01) 
-- CODE:
from math import*
li = 2
ki = 5
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:09) 
-- CODE:
from math import*
li = 2
ki = 5
ke = 9
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:36) 
-- CODE:
from math import*
li = 2
ki = 5
ke = 9
num = eval(input("um numero qualquer:"))
print(num)
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:48:32) 
-- CODE:
from math import*
x = 
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 3
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(resultado,10))

-- EXECUTION TIME:
0.138144
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 2
    x = 
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:50:13) 
-- CODE:
from math import*
x = eval(input("Digite um valor"))
k = int(input("Digite um valor: "))
contador = 1
sinal =-1 
resultado = x
expoente = 3
while ( contador < k  ):
	resultado = resultado + ( sinal * ( x ** expoente/factorial(expoente)))
	sinal = sinal*(-1)
	expoente = expoente + 2
	contador += 1 
print(round(resultado,10))

-- EXECUTION TIME:
0.16799
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
